[package]
name = "rust-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1" , features = ["full"]}
#Serde / json
serde = { version = "1" , features = ["derive"]}
serde_json = "1"
#Axum
axum = "0.7"
#Tower
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
#Others
lazy-regex = "2"
async-trait = "0.1"

[dev-dependencies]
anyhow="1"
httpc-test = "0.1.1"